chore - Added a link to checkout form on page published

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <p>Since this is repo is created only for practice purpose, and it's not a complete end-to-end application there is not specific installation process
 One can check the solution directly by visiting the pages on provided link</p>
 
+<a href="quizes/index.html">Checkout Form</a>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/kavitahkulkarni/webNanoDegree">Webnanodegree</a> is maintained by <a href="https://github.com/kavitahkulkarni">kavitahkulkarni</a>.</span>
 
